--- a/index.html
+++ b/index.html
@@ -9,15 +9,33 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./style.css" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <title>Shoping Mart</title>
   </head>
   <body>
+    <!-- <div class="alert">
+      <h4 style="font-size: medium; font-weight: bolder">
+        Get Two Product Buy, Getting 45% Discount
+      </h4>
+    </div> -->
+    <div class="navbar">
+      <img class="logo" src="zsaSjr.jpg" alt="" />
+      <h3>Shoping Marts</h3>
+
+      <div class="help">
+        <h3>Support</h3>
+        <h3>Help</h3>
+      </div>
+    </div>
     <div class="d-flex gap-5 flex-wrap" id="list"></div>
+    <div class="foobar">
+      <h3>Devalop BY <span style="color: red">MOiZ ALi</span></h3>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
