--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h3>Help</h3>
       </div>
     </div>
-    <div class="d-flex gap-5 flex-wrap" id="list"></div>
+    <div class="moiz d-flex gap-5 flex-wrap" id="list"></div>
     <div class="foobar">
       <h3>Devalop BY <span style="color: red">MOiZ ALi</span></h3>
     </div>
